--- a/UI/templates/index_inference.html
+++ b/UI/templates/index_inference.html
@@ -92,7 +92,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>多种中医药共用查询系统</h1>
+    <h1>基于中药知识图谱的中药共用查询系统</h1>
     <form method="POST">
       <label for="symptom">请输入要查询的两种药材：</label>
       <input type="text" id="symptom" name="symptom" placeholder="如：藿香正气丸和癫狂梦醒汤可以一起服用吗？" required value="{{ request.form.get('symptom', '') }}">
